--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-encode": "^1.0.1",
     "mongoose": "^5.11.9",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "nodemailer": "^6.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
