--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "Khalid Alkhalili",
   "license": "ISC",
   "dependencies": {
+    "basic-ftp": "^4.6.6",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
